009: start app in server